Finalización de la clase semana #3

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 
 <html lang="es">
     <head>
@@ -7,19 +7,23 @@
         <meta name="description" content="Página de la lección 2"/>
         <meta name="Keywords" content="html5, css, web, fidelitas" />
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
+        <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!--Esta etiqueta indica al navegador que es un encabeza -->
-        <header id="encabezado">
-            <h1>Tienda en línea</h1>
-            <br>
-        </header> 
-        <!--Esta etiqueta indica al navegador que es un nav -->
-        <nav id="menu">
-            <a href="ejemplo9.html">Atrás</a>
-            <a href="index.html">Home</a>
-            <a href="ejemplo1.html">Adelante</a>  
-        </nav>
+        <header class="header">
+            <nav class="nav">
+                <a href="index.html" class="logo nav-link">TechShop</a> 
+            <u1 class="nav-menu">
+                <li class="nav-menu-item"><a class="nav-menu-link nav-link" href ="ejemplo9.html">&LeftTriangleBar;</a> </i>
+                <li class="nav-menu-item"><a class="nav-menu-link nav-link" href ="ejemplo2.html">&RightTriangleBar;</a> </i>
+                <li class="nav-menu-item"><a class="nav-menu-link nav-link" href ="audios.html">Audios</a> </i>
+                <li class="nav-menu-item"><a class="nav-menu-link nav-link" href ="videos.html">Videos</a> </i>
+                <li class="nav-menu-item"><a class="nav-menu-link nav-link" href ="iframes.html">iFrames</a> </i>
+                <li class="nav-menu-item"><a class="nav-menu-link nav-link" href ="formularios.html">Formularios</a> </i>
+            </u1>
+            </nav>
+        </header>
         <aside id="barraLateral">
             <h2>Productos más vendidos</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit porta, at ac ullamcorper aliquam augue dictum velit convallis molestie, quisque natoque fames malesuada libero sociis aenean. Tortor placerat cras phasellus luctus sodales mollis vehicula egestas eu habitant lectus, volutpat vulputate quis tempor imperdiet porta aliquam ad et. Conubia posuere vivamus aptent dis ac volutpat phasellus, in sollicitudin per libero laoreet mauris pretium curabitur, dui integer himenaeos hac semper tempor. Sodales consequat aptent augue vehicula tellus in justo tempor imperdiet semper, potenti etiam sem gravida est turpis velit habitasse suspendisse molestie, bibendum rutrum luctus at tristique fames hendrerit conubia morbi.</p>
